// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.user";
option java_outer_classname = "UserProto";

package user;

// The user service definition.
service UserService {
  // 创建用户
  rpc Store (UserRequest) returns (UserReply) {}
}

message UserRequest {
  // string phone = 1; // 手机
  string username = 2;  // 用户名
  // string password = 3;  // 密码
}

message UserReply {
  // int32 code = 1; // 状态码
  string message = 2;  // 响应信息
}
